add day 4 parts I and II, prepare day 5